# ai-treasurer

ai-not-so-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  router.py
ai-not-so-agent/auth/: cli_auth.py  login.py  session.py  signup.py
ai-not-so-agent/chatbot/: llm.py  llm_http.py  memory.py  utils.py
ai-not-so-agent/db/: collection_list.py  connectdb.py  crud.py
ai-not-so-agent/embeddings/: embeddings.py
ai-not-so-agent/mcp_servers/: filesystem_server.py
ai-not-so-agent/scheduler/: scheduler_crud.py  scheduler_llm.py  scheduler_manager.py
ai-not-so-agent/setup/: create_collections.py  create_ttl_index.py  create_vector_search_index.py
ai-not-so-agent/setup/config/: ttl_index_memories.json  vectorSearchIndex.json
ai-not-so-agent/skills/: skills_manager.py  skills_metadata.json
ai-not-so-agent/skills/ai_knowledge_skill/: SKILL.md
ai-not-so-agent/tests/: test_skills.py
ai-not-so-agent/tools/: ddgs_search.py  github_tool.py  gmail_send.py  manage_scheduler.py  manage_user_memory.py  mcp_filesystem.py  tools.json
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Layout.jsx
frontend/src/components/chat/: ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  EmptyState.jsx  TypingIndicator.jsx
frontend/src/components/sidebar/: NavItem.jsx  Sidebar.jsx  nav-config.js
frontend/src/page/: Chat.jsx  Home.jsx
frontend/src/routes/: ChatPage.jsx  Page1.jsx  Page2.jsx  Page3.jsx
frontend/src/sidebar/: Sidebar.jsx
